# Protein-Filament-Tracking-in-3D

./: .gitignore  README.md  app.py  ch20_URA7_URA8_001-crop1.tif  ch20_URA7_URA8_001-crop2.tif  ch20_URA7_URA8_002_hyperstack_crop_38_tracking.csv  ch20_URA7_URA8_002_hyperstack_crop_45_tracking.csv  check_analysis.py  inspo.js  notes.md  pyproject.toml  show_tiff.py
2D/: ch20_URA7_URA8_002-crop5.tif  ch20_URA7_URA8_002-crop6.tif
Ridge_Enhancement/: Image.py  Parameters.txt  analyze.py  app.py  debug_extend.py  inspect_raw.py  inspect_segmentation.py  run_custom.py  what it does.txt
journal/: 2026-03-21.md
models/: filament_model.pt  filament_unet.pt  filament_unet2d_temporal.pt  filament_unet2d_temporal_auto.pt  filament_unet_ridge.pt  labels.json  train_2d_temporal_log.csv  train_temporal_auto_log.csv  train_temporal_log.csv
output/: filament_dynamics_summary.csv  filament_frame_measurements.csv  filament_length_estimate.csv  filament_xy_slice_measurements.csv  processed_filaments.csv
results/: ch20_URA7_URA8_001_hyperstack_crop_01_analysis.npz  ch20_URA7_URA8_001_hyperstack_crop_02_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_03_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_04_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_05_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_06_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_07_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_09_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_10_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_12_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_13_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_16_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_17_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_19_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_20_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_22_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_23_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_24_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_25_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_26_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_28_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_29_analysis.npz  ch20_URA7_URA8_001_hyperstack_crop_29_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_30_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_31_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_32_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_33_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_34_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_35_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_36_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_37_tracking.csv  ch20_URA7_URA8_001_hyperstack_crop_40_analysis.npz  ch20_URA7_URA8_001_hyperstack_crop_40_tracking.csv  (+36 more)
scripts/: batch_3d_tracker.py  (+47 more)
(+387 files in other folders)
