[project]
name = "biohack"
version = "0.1.0"
description = "Filament detection and segmentation pipeline for live-cell microscopy"
requires-python = ">=3.11, <3.14"
dependencies = [
    "tifffile>=2023.1.1",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "torch>=2.0",
    "torchvision>=0.15",
    "imageio>=2.28",
    "imageio-ffmpeg>=0.4.8",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/nightly/cu128/torch/",
    "https://download.pytorch.org/whl/nightly/cu128/torchvision/",
    "https://download.pytorch.org/whl/nightly/cu128/torchaudio/",
    "https://download.pytorch.org/whl/nightly/cu128/pytorch-triton/",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
